<resources>
    <string name="app_name">Productify</string>
    <string name="assign">Assignments</string>
    <string name="assignName">Assignment Name</string>
    <string name="assignDate">Due Date</string>
    <string name="assignLength">Total Anticipated Length in Hours</string>
    <string name="sampleLength">Length: 8 hours</string>
    <string name="assignDays">Days of the Week to Work:</string>
    <string name="mon">Monday</string>
    <string name="tues">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thurs">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="create">Create New Assignment</string>
    <string name="view">View Existing Assignments</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="directions"> Click to Integrate Google Calendar </string>
    <string name="calendar">Sign In</string>
    <string name="newAssign">Create New Assignment</string>
    <string name="cancel">Cancel</string>
    <string name="edit"> Edit</string>
    <string name="confirm"> Confirm</string>
    <string name="assignmentName"> Elevens Solitaire</string>
    <string name="accesscalendar">Access Calendar</string>
    <string name="calendargo">Back to Calendar</string>
    <string name="timesToWorkText"> Times To Work (Scroll to see all)</string>
    <string name="preview">Preview</string>
    <string name="returnHome"> Return to Home</string>
    <string name="existing">Existing </string>
    <string name="upcoming">Upcoming </string>
    <string name="sampleTodayDate">Today: March 11, 2018 </string>
    <string name="sampleDate1">March 12, 2018</string>
    <string name="sampleDate2">March 15, 2018</string>
    <string name="sampleAssignProg1">Physics Lab (50%) 7PM - 9PM</string>
    <string name="sampleAssignProg2">Hum Essay (25%) 4PM - 5PM</string>
    <string name="sampleAssignProg3">Hum Essay (50%) 6PM - 7PM</string>
    <string name="sampleAssignProg4">CS Exercises (75%) 8PM - 9PM</string>
    <string name="sampleAssignProg5">Hum Essay (75%) 4PM - 5PM</string>
    <string name="sampleAssignProg6">Physics Lab (50%) 6PM - 8PM</string>
    <string name="sampleDueDate">Due: March 11, 2018 - 10:00</string>
    <string name="sampleStartDate">Start: March 8, 2018- 10:00 </string>
    <string name="sampleWorkTime1">March 5th: 10AM - 12PM (25%)</string>
    <string name="sampleWorkTime2">March 7th: 1PM - 3PM (50%)</string>
    <string name="sampleWorkTime3">March 9th: 7PM - 9PM (75%)</string>
    <string name="sampleWorkTime4">March 10th: 4PM - 6PM (100%)</string>
    <string name="assignYear">Year</string>
    <string name="assignMonth">Month</string>
    <string name="assignDay">Day</string>
    <string name="assignHour">Hour (0-23)</string>
    <string name="assignMinute">Minute</string>
    <string name="start">Start Date</string>
    <string name="heading">Home</string>
    <string name="signOutBut">Sign out</string>
    <string name="dayofweek">Day of Week</string>
    <!-- /-->


</resources>
