<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Assignment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/assignmentText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/assign"
                android:textAlignment="center"
                android:textColor="black"
                android:textSize="60sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.050000012" />

            <TextView
                android:id="@+id/newAssignmentText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/newAssign"
                android:textAlignment="center"
                android:textColor="black"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.19999999" />

            <EditText
                android:id="@+id/assignmentName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/newAssign"
                android:inputType="text"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/assignmentDueDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/assignDate"
                android:inputType="datetime|date|time"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/assignmentLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/assignLength"
                android:inputType="number"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/assignDaysText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/assignDays"
                android:textAlignment="center"
                android:textColor="black"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.19999999" />

            <CheckedTextView
                android:id="@+id/mondayCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mon"
                android:textSize="30sp" />

            <CheckedTextView
                android:id="@+id/tuesdayCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tues"
                android:textSize="30sp" />

            <CheckedTextView
                android:id="@+id/wednesdayCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wed"
                android:textSize="30sp" />

            <CheckedTextView
                android:id="@+id/thursdayCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thurs"
                android:textSize="30sp" />

            <CheckedTextView
                android:id="@+id/fridayCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fri"
                android:textSize="30sp" />

            <CheckedTextView
                android:id="@+id/saturdayCheck"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sat"
                android:textSize="30sp" />

            <CheckedTextView
                android:id="@+id/sundayCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sun"
                android:textSize="30sp" />

            <Button
                android:id="@+id/createBut"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/create"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/viewBut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view"
                android:textSize="30sp"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>