<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Date"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center">
    <!-- The background image was taken from
    https://fineartamerica.com/featured/blue-sky-abstract-low-polygon-background-aloysius-patrimonio.html -->

    <TextView
        android:id="@+id/currentYearText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assignYear"
        android:textSize="50sp"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/currentMonthText"
        android:layout_width="325dp"
        android:layout_height="75dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/assignMonth"
        android:textColor="#ffffff"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/currentDayText"
        android:layout_width="325dp"
        android:layout_height="300dp"
        android:background="#ffffff"
        android:gravity="center"
        android:text="@string/assignDay"
        android:textColor="@android:color/black"
        android:textSize="56sp" />

    <TextView
        android:id="@+id/dayOfWeekText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="-50dp"
        android:text="@string/dayofweek"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/mOutputText"
        android:layout_width="match_parent"
        android:layout_height="323dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp"
        android:text="No assignments today"
        android:textAlignment="center"
        android:textSize="30sp" />
</LinearLayout>